--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,9 +8,10 @@
     tools:context="com.winning.mars.MainActivity">
 
     <TextView
+        android:id="@+id/tvLeak"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World 6!"
+        android:text="jump to leak"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
