--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,16 +5,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.winning.mars.MainActivity">
+    android:background="@android:color/white">
 
     <TextView
         android:id="@+id/tvLeak"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="jump to leak"
+        android:text="手动制造溢出错误"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent"
+        android:textColor="@android:color/black"/>
 
 </android.support.constraint.ConstraintLayout>
