--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,10 +12,65 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="手动制造溢出错误"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="100dp"
+        android:textColor="@android:color/black"/>
+
+    <TextView
+        android:id="@+id/tvCrash"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="手动制造崩溃"
+        app:layout_constraintTop_toBottomOf="@id/tvLeak"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="40dp"
+        android:textColor="@android:color/black"/>
+
+    <TextView
+        android:id="@+id/tvUpdate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="手动模拟自动更新"
+        app:layout_constraintTop_toBottomOf="@id/tvCrash"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="40dp"
+        android:textColor="@android:color/black"/>
+
+    <TextView
+        android:id="@+id/tvNetWork"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="手动模拟网络拦截"
+        app:layout_constraintTop_toBottomOf="@id/tvUpdate"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="40dp"
+        android:textColor="@android:color/black"/>
+
+    <TextView
+        android:id="@+id/tvLogin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="手动模拟登录"
+        app:layout_constraintTop_toBottomOf="@id/tvNetWork"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="40dp"
+        android:textColor="@android:color/black"/>
+
+    <TextView
+        android:id="@+id/tvInflate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="手动模拟页面渲染"
+        app:layout_constraintTop_toBottomOf="@id/tvLogin"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="40dp"
         android:textColor="@android:color/black"/>
 
 </android.support.constraint.ConstraintLayout>
