--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,8 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="100dp"
-        android:textColor="@android:color/black"/>
+        android:textColor="@android:color/black"
+        />
 
     <TextView
         android:id="@+id/tvCrash"
